<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_screen"
        android:key="pref_category_screen">
        <CheckBoxPreference
            android:key="pref_screenStatus"
            android:title="@string/pref_screenStatus"
            android:summary="@string/pref_screenStatus_summ"
            android:defaultValue="false" />
        <ListPreference
            android:key="pref_screenOrientation"
            android:title="@string/pref_screenOrientation"
            android:summary="%s"
            android:dialogTitle="@string/pref_screenOrientation"
            android:entries="@array/pref_screenOrientation_entries"
            android:entryValues="@array/pref_screenOrientation_values"
            android:defaultValue="@string/pref_screenOrientation_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_control"
        android:key="pref_category_control">
        <CheckBoxPreference
            android:key="pref_dialClickable"
            android:title="@string/pref_dialClickable"
            android:summary="@string/pref_pref_dialClickable_summ"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_vibrateStatus"
            android:title="@string/pref_vibrateStatus"
            android:summary="@string/pref_vibrateStatus_summ"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_sound"
        android:key="pref_category_sound">
        <CheckBoxPreference
            android:key="pref_soundStatus"
            android:title="@string/pref_soundStatus"
            android:summary="@string/pref_soundStatus_summ"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_timerOff"
            android:title="@string/pref_timerOff"
            android:summary="@string/pref_timerOff_summ"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_customSoundTimer"
            android:title="@string/pref_customSoundTimer"
            android:summary="@string/pref_customSoundTimer_summ"
            android:defaultValue="false"/>
        <RingtonePreference
            android:key="pref_customMelody"
            android:title="@string/pref_selectMelody"
            android:dependency="pref_customSoundTimer"
            android:enabled="false"/>
    </PreferenceCategory>


</PreferenceScreen>