<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bottom_menu_background"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnStopwatchReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_bottom_button"
        android:text="@string/reset"
        android:textColor="@color/actionbar_text"
        android:textSize="@dimen/text_size_button_stopwatch" />

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/line_size_button_stopwatch"
        android:background="@color/actionbar_border" />

    <Button
        android:id="@+id/btnStopwatchStartStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_bottom_button"
        android:text="@string/start"
        android:textColor="@color/actionbar_text"
        android:textSize="@dimen/text_size_button_stopwatch" />

    <View
        android:layout_width="1dp"
        android:layout_height="@dimen/line_size_button_stopwatch"
        android:background="@color/actionbar_border" />

    <Button
        android:id="@+id/btnNewLap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_bottom_button"
        android:text="@string/lap"
        android:textColor="@color/actionbar_text"
        android:textSize="@dimen/text_size_button_stopwatch" />
</LinearLayout>